--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -32,6 +32,8 @@
                 </s:div>
             </h:panelGrid>
         </rich:panel>
+        
+        <h:outputText value="Nome: #{customersResource.nome}" />
 
     </ui:define>
 </ui:composition>
